--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<groupId>org.jooq</groupId>
 			<artifactId>jooq-meta</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
