--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,11 @@
 				spring-boot-starter-cloud-connectors
 			</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-cypher-compiler-2.2</artifactId>
-			<version>2.2.5</version>
+				<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>
+				jackson-dataformat-xml
+			</artifactId>
 		</dependency>
 	</dependencies>
 
